<resources>
    <string name="app_name">MusicInterface</string>
    <string name="previous">previous</string>
    <string name="pause">pause</string>
    <string name="next">next</string>
    <string name="now_playing">now playing </string>
    <string name="playlist">playlist</string>
    <string name="center_image">center Image</string>
    <string name="song_title">song title</string>
    <string name="artist_name">artist name</string>
    <string name="opens_the_details_activity_for_each_song">opens the details activity for each song</string>
    <string name="Song_Title">Song Title</string>
    <string name="Artist_Name">Artist Name</string>
    <string name="start_over">start over</string>
    <string name="repeat">repeat</string>
    <string name="back">back</string>
    <string name="play">play</string>
    <string name="time_start">0:00</string>
</resources>
