<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/playlist_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/medium"
        android:layout_marginStart="@dimen/medium"
        android:layout_marginTop="@dimen/large"
        android:text="@string/playlist"
        android:textAppearance="@style/PlayBar" />

    <ListView
        android:id="@+id/track_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/now_playing_textView"
        android:layout_below="@id/playlist_textView"
        android:layout_marginBottom="@dimen/large"
        android:layout_marginLeft="@dimen/medium"
        android:layout_marginRight="@dimen/medium"
        android:layout_marginTop="@dimen/large"
        android:background="#EEEEEE">
    </ListView>

    <TextView
        android:id="@+id/now_playing_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/artist_name_textViewThree"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="@dimen/small"
        android:layout_marginEnd="@dimen/small"
        android:layout_marginLeft="@dimen/medium"
        android:layout_marginRight="@dimen/small"
        android:layout_marginStart="@dimen/medium"
        android:layout_marginTop="@dimen/small"
        android:layout_toLeftOf="@id/previous_textView"
        android:layout_toStartOf="@id/previous_textView"
        android:text="@string/now_playing"
        android:textAppearance="@style/PlayBar" />

    <TextView
        android:id="@+id/artist_name_textViewThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="@dimen/small"
        android:layout_marginLeft="@dimen/medium"
        android:layout_marginStart="@dimen/medium"
        android:text="@string/artist_name"
        android:textAppearance="@style/NowPlaying" />

    <TextView
        android:id="@+id/previous_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="36dp"
        android:layout_marginLeft="@dimen/small"
        android:layout_marginRight="@dimen/small"
        android:layout_marginTop="@dimen/small"
        android:layout_toLeftOf="@id/pause_textView"
        android:layout_toStartOf="@id/pause_textView"
        android:text="@string/previous"
        android:textAppearance="@style/PlayBar" />

    <TextView
        android:id="@+id/pause_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="36dp"
        android:layout_marginLeft="@dimen/small"
        android:layout_marginRight="@dimen/small"
        android:layout_marginTop="@dimen/small"
        android:layout_toLeftOf="@id/next_textView"
        android:layout_toStartOf="@id/next_textView"
        android:text="@string/pause"
        android:textAppearance="@style/PlayBar" />

    <TextView
        android:id="@+id/next_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="36dp"
        android:layout_marginLeft="@dimen/small"
        android:layout_marginRight="@dimen/small"
        android:layout_marginTop="@dimen/small"
        android:text="@string/next"
        android:textAppearance="@style/PlayBar" />

</RelativeLayout>